--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -3,9 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<link rel="stylesheet" type="text/css" href="css/widget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
 <script type="text/javascript" src="js/dojo-0.3.1-ajax/dojo.js"></script>
 <script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
 <!--
@@ -13,7 +10,7 @@
 -->
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
 <script type="text/javascript" src="lib/DHTML.js"></script>
-<script type="text/javascript" src="lib/GTApp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
 <link rel="stylesheet" href="css/geotracing.css" />
 </head>
 <body onunload="GUnload()">
