base: adding commenting JS gui in gt webapp

--- a/base/trunk/server/webapp/gt/test/comment.html
+++ b/base/trunk/server/webapp/gt/test/comment.html
@@ -4,6 +4,7 @@
 	<title>Commenting Test</title>
 	<link rel="stylesheet" type="text/css" href="widget.css">
 	<script type="text/javascript" src="../lib/DHTML.js" ></script>
+	  <script type="text/javascript" src="../lib/Server.js" ></script>
 	<script type="text/javascript" src="comment.js" ></script>
   </head>
 
@@ -15,7 +16,8 @@
 		<td>target id</td><td><input name="targetid" id="targetid" type="text" /> e.g. a medium, person or track id</td>
 	</tr>
 	 	<tr>
-		<td>content</td><td><input name="content" id="content" type="text" /> the comment text</td>
+		<td>content</td><td>
+			 <textarea cols="40" rows="8" name="content" id="content"></textarea>
 	    </tr>
 	<tr>
    <td>name</td><td><input name="name" id="name" type="text" /> your name (optional)</td>
