--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -103,7 +103,7 @@
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="mapbox" style="position:absolute; width:200px; left:141px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
-    <ul style="list-style:none;">
+    <ul style="padding:0px;">
       <li>street map</li>
       <li>satellite map</li>
       <li>street + satellite</li>
@@ -115,12 +115,12 @@
 </script>
 <div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
-    <ul style="list-style:none;">
+    <ul style="padding:0px;">
       <li>archived tours</li>
       <li>archived traces</li>
       <li>points of interest</li>
     </ul>
-	<ul style="list-style:none;">
+	<ul style="padding:0px;">
       <li>my tours</li>
       <li>my traces</li>
       <li>my media</li>
@@ -129,7 +129,7 @@
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
-    <ul style="list-style:none;">
+    <ul style="padding:0px;">
       <li>live tours</li>
       <li>live traces</li>
       <li>live users</li>
