base: added timestamp query parm to get/put to prevent any caching (IE)

--- a/base/trunk/server/webapp/gt/content/comment.html
+++ b/base/trunk/server/webapp/gt/content/comment.html
@@ -30,7 +30,7 @@
 			</tr>
 		</table>
 	</form>
-	<a id="addcommentlink" href="#" onclick="CMT.showAddCommentForm()">Add Comment</a>
+	<a id="addcommentlink" href="#" onclick="CMT.showAddCommentForm()">Add Comment &gt;&gt;</a>
 	<h3>Comments</h3>
 	<div id="commentlist">
 		getting comments...
