--- a/app/walkandplay/trunk/client/web/newaccount.html
+++ b/app/walkandplay/trunk/client/web/newaccount.html
@@ -13,7 +13,7 @@
 -->
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
 <script type="text/javascript" src="lib/DHTML.js"></script>
-<script type="text/javascript" src="lib/GTApp.js"></script>
+<script type="text/javascript" src="lib/WPApp.js"></script>
 <script type="text/javascript" src="lib/KWClient.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 </head>
