--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/dojo-0.3.1-ajax/dojo.js"></script>
-<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/dojo/dojo.js"></script>
+<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <!--
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAAnsKeh1eS56d4nSCvWmbcBSurnAizDIuQPYrT1jN4yvuBVLWkhT_FD84oCbtAcZNS3" type="text/javascript"></script>
 -->
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
-<script type="text/javascript" src="lib/DHTML.js"></script>
+<script type="text/javascript" src="js/gt/DHTML.js"></script>
 <script type="text/javascript" src="js/WPapp.js"></script>
 <link rel="stylesheet" href="css/geotracing.css" />
 </head>
@@ -38,31 +38,8 @@
     <br />
     <br />
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="buttonbar" style="text-align:left; z-index:1000"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-    <ul>
-      <li> <img src="img/archive_bt.gif" alt="archiveButton" id="archive_bt"style="margin-left:30px;"/></li>
-      <li> <img src="img/map_bt.gif" alt="mapButton" id="maps_bt"/></li>
-      <li><img src="img/search_bt.gif" alt="search" id="search_bt"/></li>
-      <li> <img src="img/score_bt.gif" alt="scores" id="live_bt" border="0"/></li>
-      <li>
-        <div id="searchbox" style="position:absolute; width:226px; left:142px; top:72px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-          <div class="contentblock"> <span>search</span><br/>
-            <br/>
-            <form>
-              <input name="text" type="text" style="background:url(img/input_bg.jpg) no-repeat;" size="18"/>
-              <a href="#">
-              <div class="style2" id="submitSearch" style="text-align:right; text-decoration:underline;margin-right:80px;">submit</div>
-              <br />
-              </a>
-            </form>
-            <img src="img/searchTarget.gif" alt="searchTaget" style="position:absolute; left:172px; width: 33px; top: 30px;"/> </div>
-          <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-      </li>
-    </ul>
-  </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+</div>
 <div id="buttonbar" style="text-align:left;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul>
