--- a/app/walkandplay/trunk/client/web/about.html
+++ b/app/walkandplay/trunk/client/web/about.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" type="text/css" href="css/widget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
-<script type="text/javascript" src="js/dojo-0.3.1-ajax/dojo.js"></script>
-<script type="text/javascript" src="lib/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/dojo/dojo.js"></script>
+<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
-<script type="text/javascript" src="lib/DHTML.js"></script>
-<script type="text/javascript" src="lib/GTApp.js"></script>
+<script type="text/javascript" src="js/gt/DHTML.js"></script>
+<script type="text/javascript" src="js/gt/GTApp.js"></script>
 <link rel="stylesheet" href="css/geotracing.css" />
 </head>
 <body onunload="GUnload()">
