wnp: langzaam aan weer werkend

--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -24,7 +24,7 @@
 <div id="logobox"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock"><br />
     <a href="index.html"><img src="img/gt_logo.gif" alt="logo" width="221" border="0"/></a> <img src="img/cpv_v_over.gif" width="265" border="0" usemap="#Map" id="mainbuttons"/>
-    <map name="Map" id="Map">
+    <map name="Map">
       <area shape="rect" coords="2,-1,79,43" href="#" id="mainbuttonscreate"/>
       <area shape="rect" coords="90,-1,149,42" href="#" id="mainbuttonsplay"/>
       <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
