--- a/app/walkandplay/trunk/client/web/newaccount.html
+++ b/app/walkandplay/trunk/client/web/newaccount.html
@@ -3,9 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing - walk and play</title>
-<link rel="stylesheet" type="text/css" href="css/widget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <!--
@@ -13,7 +10,7 @@
 -->
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
-<script type="text/javascript" src="js/gt/WPApp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/gt/KWClient.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 </head>
@@ -22,7 +19,7 @@
 <div id="logobox"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock"><br />
     <a href="index.html"><img src="img/gt_logo.gif" alt="logo" width="221" border="0"/></a> <img src="img/cpv_v_over.gif" width="265" border="0" usemap="#Map" />
-    <map name="Map" id="Map">
+    <map name="Map">
       <area shape="rect" coords="2,-1,79,43" href="#" />
       <area shape="rect" coords="90,-1,149,42" href="#" />
       <area shape="rect" coords="199,0,258,43" href="#" />
@@ -173,7 +170,7 @@
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <!-- / CONTENT -->
 <!-- MAP-->
-<div id="map"></div>
+<div id="map">test</div>
 <!-- /MAP -->
 <!--BORDERS-->
 <div id="mapholder">
