--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -44,7 +44,7 @@
   <div class="contentblock">
     <ul>
       <li> <img src="img/archive_bt.gif" alt="archive button" width="45" style=" margin-left:30px;" id="archive_bt"/> </li>
-      <li> <img src="img/map_bt.gif" alt="mapButton" width="45" border="0" /> </li>
+      <li> <img src="img/map_bt.gif" alt="mapButton" width="45" border="0" id="maps_bt"/> </li>
       <li> <img src="img/search_bt.gif" alt="search" width="45" id="search_bt"/> </li>
       <li> <img src="img/score_bt.gif" alt="live" id="live_bt" width="45"/></li>
       <li>
