wp: in progress

--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -185,5 +185,72 @@ SRV.url = 'wp/srv/get.jsp?';
 	display:none;
 }
 </style>
+<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="position:absolute;right:20px; top:20px;">
+			<tr>
+				<td height="20" bgcolor="#660000" align="center">
+					<div id="tracerinfo" class="infohead">
+						USER INFO
+					</div>
+
+				</td>
+			</tr>
+			<tr>
+				<td height="20" valign="middle" align="center" bgcolor="#000066">
+					<div id="trackinfo" class="infohead">TRACK INFO</div>
+				</td>
+			</tr>
+			<tr>
+
+				<td height="60" valign="middle" align="center" bgcolor="#dddddd">
+					<div id="trackview">TRACK PREVIEW</div>
+				</td>
+			</tr>
+			<tr>
+				<td valign="middle" height="18" bgcolor="#111111">
+					<div id="trackcontrols" class="controls">
+						<span class="control" id="trackprev"><img title="prev" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+
+						<span class="control" id="trackplaypause"><img title="play or pause" src="img/media-playback-start.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)"  /></span>
+						<span class="control" id="trackstop"><img title="stop" src="img/media-playback-stop.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+						<span class="control" id="tracknext"><img title="next GPS point" src="img/media-seek-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td height="20" bgcolor="#000066">
+					<div id="featuretitle" class="infohead">FEATURE TITLE</div>
+
+				</td>
+			</tr>
+			<tr>
+				<td height="240" width="320" valign="middle" align="center" bgcolor="#dddddd">
+					<div id="featurepreview">FEATURE (MEDIA+POIS) PREVIEW</div>
+				</td>
+			</tr>
+			<tr>
+
+				<td height="18" bgcolor="#111111">
+					<div id="featurecontrols" class="controls">
+						<span class="control" id="featfirst"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
+						<span class="control" id="featprev"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+						<span class="control" id="featnext"><img title="next feature" src="img/media-seek-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+						<span class="control" id="featlast"><img title="last feature" src="img/media-skip-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					</div>
+				</td>
+			</tr>
+
+			<tr>
+				<td align="left">
+					<div id="featureinfo">FEATURE INFO</div>
+					<div id="featuredesc">feature description (if available)</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+
+					<div id="bottomanchor">&nbsp;</div>
+				</td>
+			</tr>
+		</table>
 </body>
 </html>
