--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -223,9 +223,7 @@ SRV.url = 'wp/srv/get.jsp?';
 				</td>
 			</tr>
 			<tr>
-				<td height="240" width="320" valign="middle" align="center" bgcolor="#dddddd">
-					<div id="featurepreview">FEATURE (MEDIA+POIS) PREVIEW</div>
-				</td>
+			  <td height="240" width="320" valign="middle" align="center" style="background:url(img/mediaplayer.png)">&nbsp;</td>
 			</tr>
 			<tr>
 
