--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -90,7 +90,7 @@
 <script type="text/javascript">
 
 </script>
-<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:block;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>archived tours</li>
@@ -186,26 +186,12 @@ SRV.url = 'wp/srv/get.jsp?';
 }
 </style>
 <table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="position:absolute;right:20px; top:20px;">
-			<tr>
-				<td height="20" bgcolor="#660000" align="center">
-					<div id="tracerinfo" class="infohead">
-						USER INFO
-					</div>
-
-				</td>
-			</tr>
-			<tr>
-				<td height="20" valign="middle" align="center" bgcolor="#000066">
-					<div id="trackinfo" class="infohead">TRACK INFO</div>
-				</td>
-			</tr>
-			<tr>
-
+			<tr style="display:none;">
 				<td height="60" valign="middle" align="center" bgcolor="#dddddd">
 					<div id="trackview">TRACK PREVIEW</div>
 				</td>
 			</tr>
-			<tr>
+			<tr style="display:none;">
 				<td valign="middle" height="18" bgcolor="#111111">
 					<div id="trackcontrols" class="controls">
 						<span class="control" id="trackprev"><img title="prev" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
@@ -216,34 +202,44 @@ SRV.url = 'wp/srv/get.jsp?';
 					</div>
 				</td>
 			</tr>
+			<tr style="display:none;">
+				<td height="20" bgcolor="#660000" align="center">
+					<div id="tracerinfo" class="infohead">
+						USER INFO
+					</div>
+
+				</td>
+			</tr>
+			<tr style="display:none;">
+				<td height="20" valign="middle" align="center" bgcolor="#000066">
+					<div id="trackinfo" class="infohead">TRACK INFO</div>
+				</td>
+			</tr>
 			<tr>
+			<tr style="display:none;">
 				<td height="20" bgcolor="#000066">
 					<div id="featuretitle" class="infohead">FEATURE TITLE</div>
 
 				</td>
 			</tr>
 			<tr>
-			  <td height="240" width="320" valign="middle" align="center" style="background:url(img/mediaplayer.png)">&nbsp;</td>
+			  <td height="400" width="320" valign="middle" align="center" style="background:url(img/mediaplayer.png) no-repeat;">
+			  	<div id="featurepreview"></div>
+				<div id="featurecontrols" class="controls">
+					<span class="control" id="featfirst" style="display:none;"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
+					<span class="control" id="featprev" style="display:none;"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					<span class="control" id="featnext"><img title="next feature" src="img/play.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					<span class="control" id="featlast" style="display:none;"><img title="last feature" src="img/media-skip-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+				</div>
+			  </td>
 			</tr>
-			<tr>
-
-				<td height="18" bgcolor="#111111">
-					<div id="featurecontrols" class="controls">
-						<span class="control" id="featfirst"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
-						<span class="control" id="featprev"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
-						<span class="control" id="featnext"><img title="next feature" src="img/media-seek-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
-						<span class="control" id="featlast"><img title="last feature" src="img/media-skip-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
-					</div>
-				</td>
-			</tr>
-
-			<tr>
+			<tr style="display:none;">
 				<td align="left">
 					<div id="featureinfo">FEATURE INFO</div>
 					<div id="featuredesc">feature description (if available)</div>
 				</td>
 			</tr>
-			<tr>
+			<tr style="display:none;">
 				<td>
 
 					<div id="bottomanchor">&nbsp;</div>
