--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -97,7 +97,7 @@
       <li>archived traces</li>
       <li>points of interest</li>
     </ul>
-	<ul style="padding:0px;">
+	<ul style="padding:0px; display:none;">
       <li>my tours</li>
       <li>my traces</li>
       <li>my media</li>
