--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -90,7 +90,7 @@
 <script type="text/javascript">
 
 </script>
-<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>archived tours</li>
@@ -104,7 +104,7 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:block;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
   
   </div>
@@ -224,7 +224,7 @@ SRV.url = 'wp/srv/get.jsp?';
 			</tr>
 			<tr>
 			  <td height="400" width="320" valign="middle" align="center" style="background:url(img/mediaplayer.png) no-repeat;">
-			  	<div id="featurepreview"></div>
+			  	<div id="featurepreview" style="height:290px;"></div>
 				<div id="featurecontrols" class="controls">
 					<span class="control" id="featfirst" style="display:none;"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
 					<span class="control" id="featprev" style="display:none;"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
