base: various JS/AJAX updates and queries

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-<meta content="GPS, GPRS, Mobile phone, Java, J2ME, where to skate, GeoTracing, GeoDrawing, GPSDrawing, inline skating, skeeler" name="KeyWords" />
-<meta content="Just van den Broecke" name="Author" />
-<meta content="GeoSkating, draw skate routes with GPS and mobile phones" name="Description" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<meta content="GPS, GPRS, Mobile phone, Java, J2ME, where to skate, GeoTracing, GeoDrawing, GPSDrawing, inline skating, skeeler"
+		  name="KeyWords"/>
+	<meta content="Just van den Broecke" name="Author"/>
+	<meta content="GeoSkating, draw skate routes with GPS and mobile phones" name="Description"/>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title>GeoTracing</title>
 </head>
@@ -15,13 +16,14 @@
 
 <div id="content">
 <p>
-<img src="img/geotracing-logo.gif" border="0"  alt="gt-logo" align="middle" />&nbsp;&nbsp;
+	<img src="img/geotracing-logo.gif" border="0" alt="gt-logo" align="middle"/>&nbsp;&nbsp;
 </p>
+
 <p>
-<a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
-<a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
-<a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
-<a href="wiki">[Documentation]</a>&nbsp;&nbsp;
+	<a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
+	<a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
+	<a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
+	<a href="wiki">[Documentation]</a>&nbsp;&nbsp;
 </p>
 <hr/>
 
@@ -30,112 +32,238 @@
 		tracing live from the
 		<a href="http://www.foss4g2006">FOSS4G Conference</a> in Lausanne,
 		Switzerland. Below are the tracks/photo's </p>
+
 	<p>
-	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=map">FOSS4G - sept 12, 2006</a><br/>
-	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=map">FOSS4G - sept 13, 2006</a><br/>
-	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=map">FOSS4G - sept 14, 2006 (+social event)</a><br/>
-    </p>
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=map">FOSS4G - sept 12,
+			2006</a><br/>
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=map">FOSS4G - sept 13,
+			2006</a><br/>
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=map">FOSS4G - sept 14,
+			2006 (+social event)</a><br/>
+	</p>
 
 </div>
+
 <h2>About</h2>
+
 <p>
-GeoTracing is a software platform for creating multimedial geo-applications.
-These applications have in common that they allow you to tell your multimedial story
-about your movement through the landscape, whether on foot, skates, by bike or other means.
-View for example <a href="http://www.geotracing.com/gt" target="new" >the TraceLand application.</a>
-You can there sign up and download the <a href="mobitracer.html">MobiTracer mobile client</a>.
+	GeoTracing is a software platform for creating multimedial geo-applications.
+	These applications have in common that they allow you to tell your multimedial story
+	about your movement through the landscape, whether on foot, skates, by bike or other means.
+	View for example <a href="http://www.geotracing.com/gt" target="new">the TraceLand application.</a>
+	You can there sign up and download the <a href="mobitracer.html">MobiTracer mobile client</a>.
 </p>
+
 <h2>Applications</h2>
 <p>
-The following applications have been or are being developed with GeoTracing.
+	The following applications have been or are being developed with GeoTracing.
 </p>
-<p>
-<a href="http://www.geotracing.com/gt">TraceLand</a> - the GeoTracing testbed application<br>
-<a href="http://www.geoskating.com">GeoSkating</a> - create media-annotated skate-maps<br>
-<a href="http://www.senseofthecity.nl">Sense of the City</a> - civilians trace Eindhoven<br>
-<a href="http://www.senseofbrainport.nl">Sense of Brainport</a> - tracing in south of Netherlands<br>
-<a href="http://www.bliin.com">Bliin</a> - navigating experiences (in progress)<br>
-<a href="http://www.geosailing.com">GeoSailing</a> - create media-annotated sailing-tracks<br>
-<a href="http://www.geobiking.com">GeoBiking</a> - create media-annotated bicycle tracks<br>
-<a href="http://www.n8spel.nl">N8Spel</a> - a multimedial geodrawing game<br>
-<a href="http://www.geotracing.com/otter">OtterTracing</a> - Field-observation of otters in The Netherlands<br>
-<a href="http://www.geotracing.com/uvatest">Mobile Learning Game Kit (MLGK)</a> - (in progress)
-</p>
+<table cellspacing="0" cellpadding="4" border="0">
+<tr>
+
+	<td align="center">
+		<p>
+
+			<a target="_new" href="http://www.geotracing.com/gt">
+				<img src="img/gt-traceland.jpg" border="0" title="the GeoTracing testbed application" alt="traceland"><br>
+				Traceland
+			</a>
+		</p>
+	</td>
+
+	<td align="center">
+		<p>
+			<a target="_new" href="http://www.geoskating.com">
+				<img src="img/gt-geoskating.jpg" title="create media-annotated skate-maps that show asphalt quality" alt="geoskating" border="0"><br>
+				GeoSkating
+			</a>
+		</p>
+	</td>
+
+	<td align="center">
+		<p>
+
+			<a target="_new" href="http://www.n8spel.nl">
+				<img src="img/gt-n8spel.jpg" title="a multimedial geodrawing game for the Amsterdam Museum Night nov 2005"  alt="n8spel" border="0"><br>
+				N8Spel
+			</a>
+
+		</p>
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		<p>
+			<a target="_new" href="http://www.bliin.com">
+				<img src="img/gt-bliin.jpg" title="the coolest GeoTracing app: navigate geotagged experiences" alt="bliin" border="0"><br>
+				Bliin
+			</a>
+		</p>
+	</td>
+	<td align="center">
+		<p>
+			<a target="_new" href="http://kwlabs-blog.waag.org/mediawiki/index.php/KWLocativeMedia">
+				<img src="img/gt-mlgk.jpg" title="formerly known as Mobile Learning Game Kit (MLGK), in cooperation with Waag Society"border="0"><br>
+				WalkAndPlay
+			</a>
+		</p>
+	</td>
+	<td align="center">
+		<p>
+
+			<a target="_new" href="http://www.geosailing.com" >
+				<img src="img/gt-geosailing.jpg" title="create media-annotated sailing-tracks" alt="geosailing" border="0"><br>
+				GeoSailing
+			</a>
+		</p>
+	</td>
+
+
+
+</tr>
+<tr>
+	<td align="center">
+		<p>
+			<a target="_new" href="http://www.senseofthecity.nl">
+				<img src="img/gt-sotce.jpg" title="civilians trace Dutch city of Eindhoven (april 2006)" alt="senseofthecity" border="0"><br>
+				SenseOfTheCity
+			</a>
+		</p>
+	</td>
+	<td align="center">
+		<p>
+			<a target="_new" href="http://www.senseofthecity.nl/sobp">
+				<img src="img/gt-sobp.jpg" title="people from the Brainport community tracing their area (SE Brabant, Netherlands)" alt="senseofbrainport" border="0"><br>
+				SenseOfBrainport
+			</a>
+		</p>
+	</td>
+
+	<td align="center">
+		<p>
+			<a target="_new" href="http://www.geotracing.com/otter">
+				<img src="img/gt-ottertracing.jpg" title="Field-observation of otters in The Netherlands (with SON)" alt="ottertracing" border="0"><br>
+				OtterTracing
+			</a>
+		</p>
+	</td>
+
+</tr>
+<tr>
+	<td align="center">
+		<p>
+
+			<a target="_new" href="http://www.geobiking.com">
+				<img src="img/gt-geobiking.jpg" title="create media-annotated bicycle tracks (in progress, volunteers?)" alt="" border="0"><br>
+				GeoBiking
+			</a>
+		</p>
+	</td>
+
+	<td align="center">
+		&nbsp;
+	</td>
+	<td align="center">
+		&nbsp;
+	</td>
+
+</tr>
+
+</table>
+
+
 <h2>Concept</h2>
+
 <p>
-<img src="img/overview.jpg" border="0">
+	<img src="img/overview.jpg" border="0"><br>
 </p>
+
 <p>
-The main concept is depicted above. The <b><i>MobiTracer</i></b> is
-a personalized Java (J2ME) application running on a mobile phone. MobiTracer
-reads GPS location
-data from a Bluetooth GPS module and sends it to a server. Within a browser the
-routes followed by MobiTracers can be viewed. Each MobiTracer can also be followed
-in real-time moving over the map.
-In addition the MobiTracer can send <b><i>track-annotations</i></b> in the form of media (images/video/audio/text)
-ratings (e.g. road-conditions) and Points of Interest (POIs)
-to the server. Media and annotations are shown at their geographic locations on the map.
-The server stores all data in a Content Management System (CMS) such that it is available
-to a wealth of applications like map-creation, geodrawing,
-playing back routes, geo/mobile-gaming etc.
+	The main concept is depicted above. The <b><i>MobiTracer</i></b> is
+	a personalized Java (J2ME) application running on a mobile phone. MobiTracer
+	reads GPS location
+	data from a Bluetooth GPS module and sends it to a server. Within a browser the
+	routes followed by MobiTracers can be viewed. Each MobiTracer can also be followed
+	in real-time moving over the map.
+	In addition the MobiTracer can send <b><i>track-annotations</i></b> in the form of media (images/video/audio/text)
+	ratings (e.g. road-conditions) and Points of Interest (POIs)
+	to the server. Media and annotations are shown at their geographic locations on the map.
+	The server stores all data in a Content Management System (CMS) such that it is available
+	to a wealth of applications like map-creation, geodrawing,
+	playing back routes, geo/mobile-gaming etc.
 </p>
+
 <p>
-Through the <b><i>WebEditor</i></b> personal tracks can also be managed.
-For example, you may have a handheld GPS (say a Garmin) that logs tracks for you.
-You may export those tracks to GPX and upload them to the server. Be sure
-to add timestamping info. In addition you may submit e.g photo's taken with a digital camera.
-Through the photo's timestamp these get geo-tagged to their locations (or you may point-and-click).
-Tracks created through the MobiTracer may be edited and annotated.
+	Through the <b><i>WebEditor</i></b> personal tracks can also be managed.
+	For example, you may have a handheld GPS (say a Garmin) that logs tracks for you.
+	You may export those tracks to GPX and upload them to the server. Be sure
+	to add timestamping info. In addition you may submit e.g photo's taken with a digital camera.
+	Through the photo's timestamp these get geo-tagged to their locations (or you may point-and-click).
+	Tracks created through the MobiTracer may be edited and annotated.
 </p>
+
 <p>
-The server stores tracks in a Content Management System no matter how they were
-created.
+	The server stores tracks in a Content Management System no matter how they were
+	created.
 </p>
+
 <h2>Features</h2>
+
 <p>
-<ul>
-  <li>create GPS tracklogs remotely from mobile phone</li>
-  <li>create GPS tracklogs remotely by (GPX) upload</li>
-  <li>submit and relate media (audio/video/images) to points in GPS tracklogs</li>
-  <li>submit and relate Points of Interests (POIs) to points in tracklogs</li>
-  <li>annotate tracklogs with route parameters (e.g asphalt rating, sceneray rating)</li>
-  <li>create overlayed maps by combining tracklogs</li>
-  <li>live/real-time tracing in browser</li>
-  <li>view and play back tracks in browser</li>
-  <li>Location Based Services (LBS) through trigger on geotagged objects (e.g. POIs)</li>
-  <li>portal functions: personal tracklogs and media</li>
-  <li>extensibility: server-side plug-ins</li>
-  <li>open/XML-based protocols: create clients in any technology</li>
- </ul>
+	<ul>
+		<li>create GPS tracklogs remotely from mobile phone</li>
+		<li>create GPS tracklogs remotely by (GPX) upload</li>
+		<li>submit and relate media (audio/video/images) to points in GPS tracklogs</li>
+		<li>submit and relate Points of Interests (POIs) to points in tracklogs</li>
+		<li>annotate tracklogs with route parameters (e.g asphalt rating, sceneray rating)</li>
+		<li>create overlayed maps by combining tracklogs</li>
+		<li>live/real-time tracing in browser</li>
+		<li>view and play back tracks in browser</li>
+		<li>Location Based Services (LBS) through trigger on geotagged objects (e.g. POIs)</li>
+		<li>portal functions: personal tracklogs and media</li>
+		<li>tagging: give tags to any items (tracks, media persons)</li>
+		<li>commenting: provide comments on any item (tracks, media persons)</li>
+		<li>extensibility: server-side plug-ins</li>
+		<li>open/XML-based protocols: create clients in any technology</li>
+	</ul>
 </p>
 
 <h2>Technologies</h2>
+
 <p>
-<a href="http://www.keyworx.org">KeyWorx</a> is the underlying technology for GeoTracing.
-KeyWorx is developed by <a href="http://www.waag.org">Waag Society</a>. Other technologies
-used are <a href="http://www.pushlets.com">Pushlets</a> (for real-time browser events),
-<a href="http://en.wikipedia.org/wiki/AJAX">AJAX</a> and <a href="http://www.google.com/apis/maps">Google Maps</a>.
+	<a href="http://www.keyworx.org">KeyWorx</a> is the underlying technology for GeoTracing.
+	KeyWorx is developed by <a href="http://www.waag.org">Waag Society</a>. Other technologies
+	used are <a href="http://www.pushlets.com">Pushlets</a> (for real-time browser events),
+	<a href="http://en.wikipedia.org/wiki/AJAX">AJAX</a> and <a href="http://www.google.com/apis/maps">Google Maps</a>.
 </p>
+
 <h2>Development</h2>
+
 <p>
- GeoTracing is in the process of going Open Source. Thanks to the
+	GeoTracing is in the process of going Open Source. Thanks to the
 	folks at <a href="http://www.codehaus.org">CodeHaus</a> we have a space at <a href="http://geotracing.codehaus.org">geotracing.codehaus.org</a>
 </p>
 
 <h2>Documentation</h2>
+
 <p>
-Documentation is maintained in
-<a href="/wiki">the GeoTracing Wiki</a>. This will in the coming time
+	Documentation is maintained in
+	<a href="/wiki">the GeoTracing Wiki</a>. This will in the coming time
 	moved to <a href="http://geotracing.codehaus.org">geotracing.codehaus.org</a>.
 </p>
+
 <h2>Interested ?</h2>
+
 <p>
-There is a mailing list at <a href="http://groups.yahoo.com/group/geotracing">groups.yahoo.com/group/geotracing</a>
-for first users, developers and other interested parties you may want to join.
+	There is a mailing list at <a href="http://groups.yahoo.com/group/geotracing">groups.yahoo.com/group/geotracing</a>
+	for first users, developers and other interested parties you may want to join.
 </p>
+
 <h2>Contact</h2>
+
 <p>
-Just van den Broecke -  just AT justobjects.nl
+	Just van den Broecke - just AT justobjects.nl
 </p>
 </div>
 </div>
